# prog-videre

./: 0_INTRO_TIL_PYTHON.md  1_KOMMANDOLINJE_APPLIKASJON.md  README.md  book.toml  serier.txt
.github/workflows/: deploy-ghpages.yaml
dag0/: 2_kommentarer.md  3_enkle_datastrukturer_og_variabler.md  4_input.md  README.md
dag1/: 1_lese_fil.md  2_skrive_fil.md  3_programargumenter.md  6_oppsummering.md
innhold/: 404.md  README.md  SUMMARY.md
innhold/dag0/: 1_kjøre_pythonprogram.md  2_kommentarer.md  3_enkle_datastrukturer_og_variabler.md  5_hvis_omatte_og_ellers.md  6_samlinger.md  7_løkker.md  8_funksjoner.md  datastrukturer.py
innhold/dag1/: 4_feilhåndtering.md  6_oppsummering.md  README.md
innhold/dag2/: 2_programargumenter.md  4_organisering.md  5_oppgaver.md  README.md
innhold/ekstra/: README.md  idle.md  terminal.md
innhold/fasit/: README.md  kap1.md  kap2.md  kap3.md  kap4.md
innhold/kap1/: 1_kjøre_pythonprogram.md  2_kommentarer.md  3_enkle_datastrukturer_og_variabler.md  4_input.md  4_samlinger.md  5_hvis_omatte_og_ellers.md  5_input.md  6_hvis_omatte_og_ellers.md  6_samlinger.md  7_løkker.md  8_funksjoner.md  README.md
innhold/kap2/: 1_lese_fil.md  2_skrive_fil.md  3_feilhåndtering.md  4_json.md  5_oppgave.md  README.md
innhold/kap3/kodeeksempler/2/: fortsette_click.py  ksjefer.txt  lag_tomme_filer.py  les_fil_arg.py  les_fil_click.py  les_fil_click_v2.py  les_fil_click_v3.py  les_fil_click_v4.py  les_fil_click_v5.py  les_fil_func.py  les_fil_hardkodet.py  les_fil_input.py  les_fil_prefiks.py  pyproject.toml
src/: SUMMARY.md
(+28 files in other folders)
